--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.VitalisApp"
         tools:targetApi="31">
         <activity
+            android:name=".Inicio"
+            android:exported="false"
+            android:label="@string/title_activity_inicio"
+            android:theme="@style/Theme.VitalisApp" />
+        <activity
             android:name=".ListaExercicio"
             android:exported="false"
             android:label="@string/title_activity_lista_exercicio"
