--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.VitalisApp"
         tools:targetApi="31">
         <activity
+            android:name=".ListaChatPersonal"
+            android:exported="false"
+            android:label="@string/title_activity_lista_chat_personal"
+            android:theme="@style/Theme.VitalisApp" />
+        <activity
+            android:name=".ListaChatUsuario"
+            android:exported="false"
+            android:label="@string/title_activity_lista_chat_usuario"
+            android:theme="@style/Theme.VitalisApp" />
+        <activity
             android:name=".Inicio"
             android:exported="false"
             android:label="@string/title_activity_inicio"
