--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -96,11 +96,6 @@
             android:name=".ConfirmacaoCadastro"
             android:exported="false"
             android:label="@string/title_activity_confirmacao_cadastro"
-            android:theme="@style/Theme.VitalisApp" />
-        <activity
-            android:name=".ConfirmacaoCadstro"
-            android:exported="false"
-            android:label="@string/title_activity_confirmacao_cadstro"
             android:theme="@style/Theme.VitalisApp" />
         <activity
             android:name=".CadastroUsuarioDois"
