--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,11 +72,11 @@
             android:exported="false"
             android:label="@string/title_activity_mural"
             android:theme="@style/Theme.VitalisApp" />
-        <activity
-            android:name=".Login"
-            android:exported="false"
-            android:label="@string/title_activity_login"
-            android:theme="@style/Theme.VitalisApp" />
+<!--        <activity-->
+<!--            android:name=".Login"-->
+<!--            android:exported="false"-->
+<!--            android:label="@string/title_activity_login"-->
+<!--            android:theme="@style/Theme.VitalisApp" />-->
         <activity
             android:name=".ConfirmacaoParq"
             android:exported="false"
@@ -103,9 +103,9 @@
             android:label="@string/title_activity_cadastro_usuario_dois"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_login"
             android:theme="@style/Theme.VitalisApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
