--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.VitalisApp"
         tools:targetApi="31">
         <activity
+            android:name=".HomePersonal"
+            android:exported="false"
+            android:label="@string/title_activity_home_personal"
+            android:theme="@style/Theme.VitalisApp" />
+        <activity
             android:name=".ChatPersonal"
             android:exported="false"
             android:label="@string/title_activity_chat_personal"
