--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,83 +9,84 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VitalisApp"
         tools:targetApi="31">
         <activity
-            android:name=".HomePersonal"
+            android:name=".Activity.HomePersonal"
             android:exported="false"
             android:label="@string/title_activity_home_personal"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".ChatPersonal"
+            android:name=".Activity.ChatPersonal"
             android:exported="false"
             android:label="@string/title_activity_chat_personal"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".ChatUsuario"
+            android:name=".Activity.ChatUsuario"
             android:exported="false"
             android:label="@string/title_activity_chat_usuario"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".ListaChatPersonal"
+            android:name=".Activity.ListaChatPersonal"
             android:exported="false"
             android:label="@string/title_activity_lista_chat_personal"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".ListaChatUsuario"
+            android:name=".Activity.ListaChatUsuario"
             android:exported="false"
             android:label="@string/title_activity_lista_chat_usuario"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".Inicio"
+            android:name=".Activity.Inicio"
             android:exported="false"
             android:label="@string/title_activity_inicio"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".ListaExercicio"
+            android:name=".Activity.ListaExercicio"
             android:exported="false"
             android:label="@string/title_activity_lista_exercicio"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".Plano"
+            android:name=".Activity.Plano"
             android:exported="false"
             android:label="@string/title_activity_plano"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".DetalheExercicio"
+            android:name=".Activity.DetalheExercicio"
             android:exported="false"
             android:label="@string/title_activity_detalhe_exercicio"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".Receita"
+            android:name=".Activity.Receita"
             android:exported="false"
             android:label="@string/title_activity_receita"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".ListaRefeicao"
+            android:name=".Activity.ListaRefeicao"
             android:exported="false"
             android:label="@string/title_activity_lista_refeicao"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".EncontreAcademia"
+            android:name=".Activity.EncontreAcademia"
             android:exported="false"
             android:label="@string/title_activity_encontre_academia"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".PerfilUsuario"
+            android:name=".Activity.PerfilUsuario"
             android:exported="false"
             android:label="@string/title_activity_perfil_usuario"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".Perfil"
+            android:name=".Activity.Perfil"
             android:exported="false"
             android:label="@string/title_activity_perfil"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".Mural"
+            android:name=".Activity.Mural"
             android:exported="false"
             android:label="@string/title_activity_mural"
             android:theme="@style/Theme.VitalisApp" /> <!-- <activity -->
@@ -94,32 +95,32 @@
         <!-- android:label="@string/title_activity_login" -->
         <!-- android:theme="@style/Theme.VitalisApp" /> -->
         <activity
-            android:name=".ConfirmacaoParq"
+            android:name=".Activity.ConfirmacaoParq"
             android:exported="false"
             android:label="@string/title_activity_confirmacao_parq"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".CadastroPersonalDois"
+            android:name=".Activity.CadastroPersonalDois"
             android:exported="false"
             android:label="@string/title_activity_cadastro_personal_dois"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".CadastroPersonal"
+            android:name=".Activity.CadastroPersonal"
             android:exported="false"
             android:label="@string/title_activity_cadastro_personal"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".ConfirmacaoCadastro"
+            android:name=".Activity.ConfirmacaoCadastro"
             android:exported="false"
             android:label="@string/title_activity_confirmacao_cadastro"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".CadastroUsuarioDois"
+            android:name=".Activity.CadastroUsuarioDois"
             android:exported="false"
             android:label="@string/title_activity_cadastro_usuario_dois"
             android:theme="@style/Theme.VitalisApp" />
         <activity
-            android:name=".Login"
+            android:name=".Activity.Login"
             android:exported="true"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.VitalisApp">
