exclusão da tela confirmação cadastro, componentização do input de texto, e tela de inicio, string.xml da tela de inico e cadastro personal

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Sep 23 18:52:42 BRT 2024
-sdk.dir=C\:\\Users\\Cliente\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\Cliente\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\alo cell\\AppData\\Local\\Android\\Sdk
