Arrumando todas as minhas telas

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 17 19:44:31 BRT 2024
-sdk.dir=C\:\\Users\\alo cell\\AppData\\Local\\Android\\Sdk
+#Mon Oct 28 20:45:06 BRT 2024
+sdk.dir=C\:\\Users\\Cliente\\AppData\\Local\\Android\\Sdk
