--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 28 20:45:06 BRT 2024
-sdk.dir=C\:\\Users\\Cliente\\AppData\\Local\\Android\\Sdk
+#Sun Nov 10 23:53:38 BRT 2024
+sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
