--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Nov 10 23:53:38 BRT 2024
-sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Cliente\\AppData\\Local\\Android\\Sdk
