--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 03 14:10:31 BRT 2024
-sdk.dir=C\:\\Users\\KATIA\\AppData\\Local\\Android\\Sdk
+#Tue Dec 03 19:16:19 GMT-03:00 2024
+sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
